--- a/talks.Rmd
+++ b/talks.Rmd
@@ -2,9 +2,9 @@
 # title: "Talks"
 # author: "Balaji Raman"
 # date: '2024-03-23'
-output: 
-  html_document:
-    keep_md: true
+output: github_document
+  # html_document:
+  #   keep_md: true
 ---
 
 ```{r setup, include=FALSE}
